--- a/appsettings.json
+++ b/appsettings.json
@@ -1,8 +1,8 @@
 {
   "ConnectionStrings": {
 
-    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=ne;Trusted_Connection=True;Encrypt=False;"
- },
+    "DefaultConnection": "Server=DESKTOP-O574H9B;Database=ne;Trusted_Connection=True;Encrypt=False;"
+  },
 
   "Jwt": {
     "Key": "super_secret_key_123456789_super_secret_1234",
